--- a/style/turtter.css
+++ b/style/turtter.css
@@ -4,6 +4,11 @@ text-align: center;
 background: #fff;
 }
 
+#signin {
+text-align: left;
+color: #6e6e6e;
+}
+
 #head {
 font-size: 300%;
 color: #333;
@@ -15,13 +20,24 @@ margin: 1em 2em 0 2em;
 margin: 1em 2em 1em 2em;
 }
 
+#user_graph{
+font-size: 90%;
+color: #606060;
+}
+
+#query_user_graph {
+margin: 0 0 0 5px;
+color: #339;
+cursor: pointer;
+}
+
 #out_turt{
 width: 100%;
 -webkit-border-radius: 3px;
 -moz-border-radius: 3px;
 border-radius: 3px;
 border: 1px solid #9e9e9e;
-font-size: 110%;
+font-size: 120%;
 font-family: 'Open Sans', sans-serif;
 color: #333;
 }
@@ -37,7 +53,7 @@ background: #f0f0f0;
 }
 
 #in_turt{
-font-size: 165%;
+font-size: 120%;
 text-align: left;
 -webkit-border-radius: 3px;
 -moz-border-radius: 3px;
